--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ input {
 }
 
 button {
-  height: 30px;
+  height: 40px;
   width: 90%;
   margin-left: 5%;
   margin-top: 10px;
@@ -53,7 +53,7 @@ button {
   color: white;
   font-size: large;
   border-radius: 5px;
-  font-size: small;
+  cursor: pointer;
 }
 
 .card-container {
