--- a/style.css
+++ b/style.css
@@ -6,11 +6,9 @@
 
 body {
   background: rgb(193, 174, 238);
-  background: linear-gradient(
-    180deg,
-    rgba(193, 174, 238, 1) 50%,
-    rgba(148, 155, 233, 1) 50%
-  );
+  background: linear-gradient(180deg,
+      rgba(193, 174, 238, 1) 50%,
+      rgba(148, 155, 233, 1) 50%);
   display: flex;
   height: 100vh;
   width: 100vw;
